# perry-doc-search

./: .gitignore  LICENSE  README.md  development.yml
backend/: README.md  development.yml  perry.db  pyproject.toml  run.sh  run_app.py
backend/compose/streamlit/production/: Dockerfile
backend/config/: example.yml
backend/docker/development/: Dockerfile
backend/docker/production/: Dockerfile
backend/perry/: messages.py  schemas.py
backend/perry/agents/: base.py  echo.py  manager.py  subquestion.py
backend/perry/api/: app.py  authentication.py  dependencies.py  schemas.py
backend/perry/api/endpoints/: agent.py  conversation.py  document.py  user.py
backend/perry/db/: init_db.py  models.py  session.py
backend/perry/db/operations/: agents.py  conversations.py  documents.py  messages.py  users.py
backend/scripts/: create_user.py
backend/tests/: conftest.py
backend/tests/agents/: fixtures.py  fixtures_subquestion.py  test_agent_registry.py  test_agents.py  test_manager.py  test_subquestion.py
backend/tests/api/: fixtures.py  test_authentication.py  test_dependencies.py
backend/tests/api/endpoints/: test_agent.py  test_conversation.py  test_document.py  test_user.py
backend/tests/db/: test_session.py
backend/tests/db/operations/: test_conversations.py  test_documents.py  test_messages.py  test_users.py
docker/: development.yml  production.yml
frontend/: README.md  app.py  pyproject.toml  🕵_Chat.py
frontend/docker/development/: Dockerfile
frontend/docker/production/: Dockerfile
frontend/pages/: 1_📖_Create_Conversation.py  2_📜_Documents.py  3_🕯️_Instructions.py  4_🔥_About.py
frontend/perry/: authentication.py  requests.py  users.py  utils.py
frontend/tests/: test_messages.py
streamlitapp/: .gitignore  app.py  development.yml  production.yml  pyproject.toml  run_app.py
streamlitapp/compose/development/streamlit/: Dockerfile
streamlitapp/compose/streamlit/: Dockerfile
streamlitapp/config/: development.yml
streamlitapp/perry/: agents.py  authenticator.py  documents.py  indexing.py  messages.py  messaging.py  schemas.py  users.py  utils.py
streamlitapp/perry/agents/: base.py  echo.py  indexing.py  single_directory_vector.py  subquestion.py  utils.py
streamlitapp/perry/api/: app.py  authentication.py
streamlitapp/perry/api/endpoints/: user.py
streamlitapp/perry/db/: api.py  init_db.py  models.py  operations.py  session.py
streamlitapp/perry/db/operations/: agents.py  conversations.py  documents.py  messages.py  users.py
streamlitapp/perry/loaders/: unstructured.py
streamlitapp/tests/: conftest.py  test_documents.py  test_indexing.py  test_messages.py  test_utils.py
streamlitapp/tests/agents/: fixtures_subquestion.py  test_agent_registry.py  test_agents.py  test_base.py  test_echo.py  test_indexing.py  test_subquestion.py
streamlitapp/tests/api/: test_authentication.py
streamlitapp/tests/db/: test_api.py  test_operations.py
streamlitapp/tests/users/: test_operations.py
(+55 files in other folders)
