[tool.poetry]
name = "vulcan-backend"
version = "0.1.0"
description = "Perry streamlit app"
authors = ["mickeybeurskens <mickeybeurskens@gmail.com>"]
readme = "README.md"
packages = [{include = "perry"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.1"
streamlit-authenticator = "^0.2.2"
pydantic = "^1.10"
llama-index = "^0.7.9"
langchain = "^0.0.234"
unstructured = "^0.8.1"
nltk = "^3.8.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.20"
passlib = "^1.7.4"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pypdf = "^3.16.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"
fpdf = "^1.7.2"
freezegun = "^1.2.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
