[tool.poetry]
name = "perry-streamlit-frontend"
version = "0.1.0"
description = "Frontend for the perry agent interface"
authors = ["mickeybeurskens <mickeybeurskens@gmail.com>"]
readme = "README.md"
packages = [{include = "perry"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
pydantic = "^2.4.0"
streamlit-authenticator = "^0.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
