[tool.poetry]
name = "streamlitapp"
version = "0.1.0"
description = "Perry streamlit app"
authors = ["mickeybeurskens <mickeybeurskens@gmail.com>"]
readme = "README.md"
packages = [{include = "perry"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.1"
streamlit-authenticator = "^0.2.2"
pydantic = "^1.10"
llama-index = "^0.7.9"
langchain = "^0.0.234"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
